Add contact and downloads pages with form validation and email functionality

--- a/src/RequestHandlers/Pages/page_html/our_game/our_game.html
+++ b/src/RequestHandlers/Pages/page_html/our_game/our_game.html
@@ -51,8 +51,9 @@
     <div class="footer">
         <div class="navigator">
             <a href="/" class="navigator_item">Home</a>
+            <a href="/downloads" class="navigator_item">Downloads</a>
             <a href="/our_team" class="navigator_item">Our Team</a>
-            <a href="#" class="navigator_item">Contact</a>
+            <a href="/contact" class="navigator_item">Contact</a>
         </div>
         <p class="footer_text_copy">© 2025 Mathochist Studios. All rights reserved.</p>
     </div>
