--- a/src/RequestHandlers/Pages/page_html/our_team/our_team.html
+++ b/src/RequestHandlers/Pages/page_html/our_team/our_team.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="member_details">
                     <h3 class="member_name">Will King</h3>
-                    <p class="member_role">Role 1</p>
+                    <p class="member_role">Señores Graphics</p>
                 </div>
             </div>
 
@@ -36,7 +36,7 @@
                 </div>
                 <div class="member_details">
                     <h3 class="member_name">Charlie Thoo-Tinsley</h3>
-                    <p class="member_role">Role 2</p>
+                    <p class="member_role">Señores Requirements / Risk Officer</p>
                 </div>
             </div>
 
@@ -46,7 +46,7 @@
                 </div>
                 <div class="member_details">
                     <h3 class="member_name">Euan Cottam</h3>
-                    <p class="member_role">Role 3</p>
+                    <p class="member_role">Planning / Software Architect</p>
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
                 </div>
                 <div class="member_details">
                     <h3 class="member_name">Zach Moussallati</h3>
-                    <p class="member_role">Role 4</p>
+                    <p class="member_role">Planning / Software Architect</p>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 </div>
                 <div class="member_details">
                     <h3 class="member_name">Harri Thorman</h3>
-                    <p class="member_role">Role 5</p>
+                    <p class="member_role">Requirements / Risk</p>
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
                 </div>
                 <div class="member_details">
                     <h3 class="member_name">Aiden Turner</h3>
-                    <p class="member_role">Role 6</p>
+                    <p class="member_role">Developer</p>
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
                 </div>
                 <div class="member_details">
                     <h3 class="member_name">Marcus Williamson</h3>
-                    <p class="member_role">Role 7</p>
+                    <p class="member_role">Developer / Software Architect</p>
                 </div>
             </div>
 
@@ -96,7 +96,7 @@
                 </div>
                 <div class="member_details">
                     <h3 class="member_name">Joshua Zacek</h3>
-                    <p class="member_role">Role 8</p>
+                    <p class="member_role">Scrum Lord</p>
                 </div>
             </div>
 
@@ -106,8 +106,9 @@
     <div class="footer">
         <div class="navigator">
             <a href="/" class="navigator_item">Home</a>
+            <a href="/downloads" class="navigator_item">Downloads</a>
             <a href="/our_game" class="navigator_item">Our Game</a>
-            <a href="#" class="navigator_item">Contact</a>
+            <a href="/contact" class="navigator_item">Contact</a>
         </div>
         <p class="footer_text_copy">© 2025 Mathochist Studios. All rights reserved.</p>
     </div>
