--- a/src/RequestHandlers/Pages/page_html/home/home.html
+++ b/src/RequestHandlers/Pages/page_html/home/home.html
@@ -23,9 +23,10 @@
 
         <div class="footer">
             <div class="navigator">
+                <a href="/downloads" class="navigator_item">Downloads</a>
                 <a href="/our_team" class="navigator_item">Our Team</a>
                 <a href="/our_game" class="navigator_item">Our Game</a>
-                <a href="#" class="navigator_item">Contact</a>
+                <a href="/contact" class="navigator_item">Contact</a>
             </div>
             <p class="footer_text_copy">© 2025 Mathochist Studios. All rights reserved.</p>
         </div>
